# swiftmhc

./: .gitignore  CITATION.cff  MANIFEST.in  Makefile  README.dev.md  README.md  add_modeled_loop.py  animate_heatmaps.py  animate_pred_loop.py  color_structure_cross_attention.py  combine_heatmaps.py  encoder-per-batch.py  fold-boxplot.py  gen-ranking-table.py  get_animated_model.py  heatmap.py  list_anchors_rmsd.py  list_preprocessed_sequences.py  minimize-energy.py  minimize-simple.py  picture_heatmap.py  predict.py  preprocess.py  print_pdb_inside_hdf5.py  pyproject.toml  recreate_structure.py  requirements.txt  run.py  sanity-check-flattened.py  sanity-check-residue-wise-enc.py  sanity-check-residue-wise-pos-enc-onehot.py  sanity-check-residue-wise-pos-enc.py  sanity-check-residue-wise.py  sanity-check.py  setup.py  visualize_pca.py  weight_pymol.py  weight_yasara.py  yasara.py
.github/workflows/: code-format-typing-check.yml
colab/: SwiftMHC_colab.ipynb
data/: HLA-A0201-from-3MRD.hdf5  HLA-A0201-from-3MRE.hdf5  HLA-A20201-from-3MRE.hdf5  example-data-table.csv
pretrained/: hla-a2-8k-9mer.pth
scripts/: measure_chirality.py  measure_clashes.py  measure_omega_angles.py  measure_ramachandran_angles.py  swiftmhc_animate_prediction.py  swiftmhc_hdf5_to_pdb  swiftmhc_minimize  swiftmhc_predict  swiftmhc_predict.py  swiftmhc_preprocess  swiftmhc_preprocess.py  swiftmhc_recreate_structure  swiftmhc_run  swiftmhc_run.py
scripts/evaluation/: find_train_test_overlap_mmcif.py  rmsd-calpha-mhc-9mer-peptides.bash
scripts/utils/: profit-calpha-rmsd.sh
swiftmhc/: config.py  dataset.py  loss.py  metrics.py  preprocess.py  time.py
swiftmhc/domain/: amino_acid.py
swiftmhc/models/: amino_acid.py  complex.py  data.py  model_types.py  residue.py  types.py
swiftmhc/modules/: cross_ipa.py  cross_structure_module.py  ipa.py  peptide_attention.py  position_encoding.py  predictor.py  sequence_attention.py  sequence_encoder.py
swiftmhc/tools/: amino_acid.py  md.py  pdb.py  quat.py  rigid.py  train.py
tcrspec/: HLA_Ax02_01-GILGFVFTL.sce  backbone_update.py  dataset.py  ipa.py  ipa.py.old  loss.py  metrics.py  operate.py  position_encoding.py  predictor.py  preprocess.py  time.py  utils.py
tcrspec/domain/: amino_acid.py
tcrspec/models/: amino_acid.py  atom.py  complex.py  types.py
tcrspec/modules/: attention.py  cross_ipa.py  cross_structure_module.py  ipa.py  position_encoding.py  predictor.py  sequence_encoding.py  transform.py
tcrspec/tools/: pdb.py  storage.py
tests/unit/: test_atom_coords.py  test_backbone.py  test_dataset.py  test_get_calpha_rmsd.py  test_ipa.py  test_loss.py  test_metrics.py  test_operate.py  test_position_encoding.py  test_predictor.py  test_preprocess.py  test_structure_module.py
tests/unit/tools/: test_amino_acid.py  test_md.py  test_pdb.py  test_quat.py  test_train.py  test_training.py
